force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>LV Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Activity</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>