force-app/main/default/objects/Activity__c/fields/Access_to_Direct_Mail__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Direct_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to Direct Mail?</label>
    <type>Checkbox</type>
</CustomField>