force-app/main/default/objects/Activity__c/fields/Access_to_Employee_Emails__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Employee_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to Employee Emails?</label>
    <type>Checkbox</type>
</CustomField>