force-app/main/default/objects/Activity__c/fields/Activities_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Activities_Success_Criteria__c</fullName>
    <label>Activities / Success Criteria</label>
    <type>TextArea</type>
</CustomField>