force-app/main/default/objects/Activity__c/fields/Assigned_Title__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Title</label>
    <type>Text</type>
</CustomField>