force-app/main/default/objects/Activity__c/fields/Attendance_Required__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Required__c</fullName>
    <label>Attendance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>