force-app/main/default/objects/Activity__c/fields/Benefits_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Consultant__c</fullName>
    <label>Benefits Consultant(s)</label>
    <type>TextArea</type>
</CustomField>