force-app/main/default/objects/Activity__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct to Employer</fullName>
            </value>
            <value>
                <fullName>Direct to TPA/ASO</fullName>
            </value>
            <value>
                <fullName>Medical Claims TPA/ASO</fullName>
            </value>
            <value>
                <fullName>Direct Through Partner</fullName>
            </value>
            <value>
                <fullName>Through PBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>