force-app/main/default/objects/Activity__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting Task (not yet completed)</fullName>
            </value>
            <value>
                <fullName>Direct Mail Sent</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Contact - Completed Conversation / Expressed Interest</fullName>
            </value>
            <value>
                <fullName>Contact – Completed Conversation / Meeting Set</fullName>
            </value>
            <value>
                <fullName>Contact – Completed Conservation / Unofficial Meeting</fullName>
            </value>
            <value>
                <fullName>Contact - Not Interested</fullName>
            </value>
            <value>
                <fullName>Contact - Call Back Later</fullName>
            </value>
            <value>
                <fullName>Contact - Send Information</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>ROI Model Creation</fullName>
            </value>
            <value>
                <fullName>ROI Model Review</fullName>
            </value>
            <value>
                <fullName>Internal Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>