force-app/main/default/objects/Activity__c/fields/Client_Health_Plan_s__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Plan_s__c</fullName>
    <label>Client Health Plan(s)</label>
    <type>TextArea</type>
</CustomField>