force-app/main/default/objects/Activity__c/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <label>Company Overview</label>
    <type>TextArea</type>
</CustomField>