force-app/main/default/objects/Activity__c/fields/Cost_of_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Supplies__c</fullName>
    <label>Cost of Supplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>