force-app/main/default/objects/Activity__c/fields/Estimated_PwDs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_PwDs__c</fullName>
    <label>Estimated PwDs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>