force-app/main/default/objects/Activity__c/fields/Event_Detail_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail_Text__c</fullName>
    <label>Event Detail Text</label>
    <type>TextArea</type>
</CustomField>