force-app/main/default/objects/Activity__c/fields/Event_Materials__c.field-meta.xml
<CustomField>
    <fullName>Event_Materials__c</fullName>
    <label>Event Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Event Kit</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Printed Assets</fullName>
            </value>
            <value>
                <fullName>Swag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>