force-app/main/default/objects/Activity__c/fields/Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendance__c</fullName>
    <label>Expected Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 100</fullName>
            </value>
            <value>
                <fullName>101 - 250</fullName>
            </value>
            <value>
                <fullName>251 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 750</fullName>
            </value>
            <value>
                <fullName>751 - 1000</fullName>
            </value>
            <value>
                <fullName>1001 - 1500</fullName>
            </value>
            <value>
                <fullName>1501 - 2000</fullName>
            </value>
            <value>
                <fullName>2001 - 2500</fullName>
            </value>
            <value>
                <fullName>2501 - 3000</fullName>
            </value>
            <value>
                <fullName>&gt;3000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>