force-app/main/default/objects/Activity__c/fields/Include_in_weekly_call_review__c.field-meta.xml
<CustomField>
    <fullName>Include_in_weekly_call_review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOR USE BY INSIDE SALES</description>
    <inlineHelpText>FOR USE BY INSIDE SALES</inlineHelpText>
    <label>Include in weekly call review?</label>
    <type>Checkbox</type>
</CustomField>