force-app/main/default/objects/Activity__c/fields/Internal_Livongo_Rep__c.field-meta.xml
<CustomField>
    <fullName>Internal_Livongo_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which rep did you have the meeting with?</inlineHelpText>
    <label>Internal Livongo Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGOActivities</relationshipName>
    <type>Lookup</type>
</CustomField>