force-app/main/default/objects/Activity__c/fields/Key_Contacts_Name_Title_Email_Phone__c.field-meta.xml
<CustomField>
    <fullName>Key_Contacts_Name_Title_Email_Phone__c</fullName>
    <label>Key Contacts (Name/Title/Email/Phone)</label>
    <type>TextArea</type>
</CustomField>