force-app/main/default/objects/Activity__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introduction - First Meeting/Demo</fullName>
            </value>
            <value>
                <fullName>ROI Discussion / Business Case</fullName>
            </value>
            <value>
                <fullName>Clinical Review</fullName>
            </value>
            <value>
                <fullName>Implementation Review</fullName>
            </value>
            <value>
                <fullName>Technical Review / Info Security</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Kickoff Meeting</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
            </value>
            <value>
                <fullName>Coffee Hour</fullName>
            </value>
            <value>
                <fullName>Innovation Event</fullName>
            </value>
            <value>
                <fullName>Additional/Other Meeting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Prospecting Review</fullName>
            </value>
            <value>
                <fullName>Opportunity Review</fullName>
            </value>
            <value>
                <fullName>Activity Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Happy Hour</fullName>
            </value>
            <value>
                <fullName>Reference Call</fullName>
            </value>
            <value>
                <fullName>Vendor Summit</fullName>
            </value>
            <value>
                <fullName>Health Fair / Benefit Fair</fullName>
            </value>
            <value>
                <fullName>CS - Meeting</fullName>
            </value>
            <value>
                <fullName>CS - Ad Hoc</fullName>
            </value>
            <value>
                <fullName>CS - Call</fullName>
            </value>
            <value>
                <fullName>CS - Business Review</fullName>
            </value>
            <value>
                <fullName>CS - Renewal Meeting</fullName>
            </value>
            <value>
                <fullName>CS - Transition Meeting</fullName>
            </value>
            <value>
                <fullName>CS - Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>