force-app/main/default/objects/Activity__c/fields/Method_of_outreach__c.field-meta.xml
<CustomField>
    <fullName>Method_of_outreach__c</fullName>
    <label>Method of outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn Message</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Face-to-Face Networking</fullName>
            </value>
            <value>
                <fullName>Other outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>