force-app/main/default/objects/Activity__c/fields/MigratedmyStrengthActivity__c.field-meta.xml
<CustomField>
    <fullName>MigratedmyStrengthActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MigratedmyStrengthActivity</label>
    <type>Checkbox</type>
</CustomField>