force-app/main/default/objects/Activity__c/fields/Navigator__c.field-meta.xml
<CustomField>
    <fullName>Navigator__c</fullName>
    <label>Navigator</label>
    <type>TextArea</type>
</CustomField>