force-app/main/default/objects/Activity__c/fields/PBM_Partner__c.field-meta.xml
<CustomField>
    <fullName>PBM_Partner__c</fullName>
    <label>PBM Partner</label>
    <type>TextArea</type>
</CustomField>