force-app/main/default/objects/Activity__c/fields/Playbooks_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Call_Date__c</fullName>
    <description>Stores date &amp; time of the call</description>
    <inlineHelpText>Date &amp; time of the call</inlineHelpText>
    <label>Playbooks Call Date</label>
    <type>DateTime</type>
</CustomField>