force-app/main/default/objects/Activity__c/fields/Playbooks_Call_Hour__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Call_Hour__c</fullName>
    <description>Stores the hour the call was placed in the prospect&apos;s time</description>
    <inlineHelpText>Stores the hour the call was placed in the prospect&apos;s time</inlineHelpText>
    <label>Playbooks Call Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>