force-app/main/default/objects/Activity__c/fields/Playbooks_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Call_Recording__c</fullName>
    <description>A link to the call recording of that specific call</description>
    <inlineHelpText>A link to the call recording of that specific call</inlineHelpText>
    <label>Playbooks Call Recording</label>
    <type>Url</type>
</CustomField>