force-app/main/default/objects/Activity__c/fields/Playbooks_Play_Name__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Play_Name__c</fullName>
    <description>Stores the name of the play a record is currently enrolled in</description>
    <inlineHelpText>The name of the play a record is currently enrolled in</inlineHelpText>
    <label>Playbooks Play Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>