force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Link_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Link_Click_Count__c</fullName>
    <description>Shows the number of times the recipient clicked on the link on the Playbooks email.</description>
    <label>Playbooks Step Email Link Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>