force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Link_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Link_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that shows if the recipient clicked on a link on the Playbooks email.</description>
    <label>Playbooks Step Email Link Clicked</label>
    <type>Checkbox</type>
</CustomField>