force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Link_Clicked_Data__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Link_Clicked_Data__c</fullName>
    <description>Data about link clicks in Playbooks.</description>
    <label>Playbooks Step Email Link Clicked Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>