force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Open_Count__c</fullName>
    <description>Number of times the record has opened an email from Playbooks.</description>
    <label>Playbooks Step Email Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>