force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that indicates if the email from Playbooks has been opened.</description>
    <label>Playbooks Step Email Opened</label>
    <type>Checkbox</type>
</CustomField>