force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Replied__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Replied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that shows if the email from Playbooks was replied to.</description>
    <label>Playbooks Step Email Replied</label>
    <type>Checkbox</type>
</CustomField>