force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Reply_Count__c</fullName>
    <description>Shows the number of replies from the original email sent.</description>
    <label>Playbooks Step Email Reply Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>