force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Email_Template_Name__c</fullName>
    <description>The name of the email template for this step in the Play.</description>
    <label>Playbooks Step Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>