force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Number__c</fullName>
    <description>Stores the step number a play was on when the activity was completed</description>
    <inlineHelpText>The step number the activity was completed on</inlineHelpText>
    <label>Playbooks Step Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>