force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Success__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked off when a user selects &quot;Success&quot; on the Play, in Playbooks.</description>
    <label>Playbooks Step Success</label>
    <type>Checkbox</type>
</CustomField>