force-app/main/default/objects/Activity__c/fields/Playbooks_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Playbooks_Step_Type__c</fullName>
    <description>Stores the type of step for the task (phone, email, other)</description>
    <inlineHelpText>The type of step for the task (phone, email, other)</inlineHelpText>
    <label>Playbooks Step Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>