force-app/main/default/objects/Activity__c/fields/Products_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Products_Pitched__c</fullName>
    <label>Products Pitched</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CKD Solution</fullName>
            </value>
            <value>
                <fullName>CV Solution</fullName>
            </value>
            <value>
                <fullName>DM Solution</fullName>
            </value>
            <value>
                <fullName>DP Solution</fullName>
            </value>
            <value>
                <fullName>Heart Failure</fullName>
            </value>
            <value>
                <fullName>Livongo DPP Powered by Retrofit</fullName>
            </value>
            <value>
                <fullName>Livongo for Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Livongo for Diabetes</fullName>
            </value>
            <value>
                <fullName>Livongo for Hypertension</fullName>
            </value>
            <value>
                <fullName>Livongo for Weight Management</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>