force-app/main/default/objects/Activity__c/fields/Prospecting_or_Pipeline_Acceleration__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_or_Pipeline_Acceleration__c</fullName>
    <label>Prospecting or Pipeline Acceleration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Pipeline Acceleration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>