force-app/main/default/objects/Activity__c/fields/Target_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Contract_Date__c</fullName>
    <label>Target Contract Date</label>
    <type>Date</type>
</CustomField>