force-app/main/default/objects/Activity__c/fields/Target_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Launch_Date__c</fullName>
    <label>Target Launch Date</label>
    <type>Date</type>
</CustomField>