force-app/main/default/objects/Activity__c/fields/Telephonic_or_F2F__c.field-meta.xml
<CustomField>
    <fullName>Telephonic_or_F2F__c</fullName>
    <label>Telephonic or F2F?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephonic/WebEx</fullName>
            </value>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>