force-app/main/default/objects/Activity__c/fields/Total_H_C_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_H_C_Spend__c</fullName>
    <label>Total H/C Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>