force-app/main/default/objects/Activity__c/fields/Total_Lives__c.field-meta.xml
<CustomField>
    <fullName>Total_Lives__c</fullName>
    <label># Total Lives</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>