force-app/main/default/objects/Activity__c/fields/Wellness_Partner__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Partner__c</fullName>
    <label>Wellness Partner</label>
    <type>TextArea</type>
</CustomField>